<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/view_toolbar" />

    <TextView
        android:id="@+id/tv_profile_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="Spodaj so zbrani vaši osebni podatki, ki ste jih vpisali pri registraciji"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Text.Grey.Medium" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_profile_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_border_round_grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_name_value"
            style="@style/Text.Grey.Cell.Trr" />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Janez"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Text.Grey.Cell.Trr" />

        <View
            android:id="@+id/profile_divider_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_divider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_value" />

        <TextView
            android:id="@+id/tv_surname_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_surname_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_surname_value"
            style="@style/Text.Grey.Cell.Trr" />

        <TextView
            android:id="@+id/tv_surname_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Novak"
            app:layout_constraintTop_toTopOf="@+id/profile_divider_1"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Text.Grey.Cell.Trr" />

        <View
            android:id="@+id/profile_divider_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_divider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_surname_value" />

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_email_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_email_value"
            style="@style/Text.Grey.Cell.Trr" />

        <TextView
            android:id="@+id/tv_email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="janez.novak@gmail.com"
            app:layout_constraintTop_toTopOf="@+id/profile_divider_2"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Text.Grey.Cell.Trr" />

        <View
            android:id="@+id/profile_divider_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_divider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_value" />

        <TextView
            android:id="@+id/tv_type_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_type_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_type_value"
            style="@style/Text.Grey.Cell.Trr" />

        <TextView
            android:id="@+id/tv_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Novinar"
            app:layout_constraintTop_toTopOf="@+id/profile_divider_3"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Text.Grey.Cell.Trr" />

        <View
            android:id="@+id/profile_divider_4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_divider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_value" />

        <TextView
            android:id="@+id/tv_medium_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_medium_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_medium_value"
            style="@style/Text.Grey.Cell.Trr" />

        <TextView
            android:id="@+id/tv_medium_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Večer"
            app:layout_constraintTop_toTopOf="@+id/profile_divider_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Text.Grey.Cell.Trr" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Button.Blue.Solid" />

</android.support.constraint.ConstraintLayout>